angular version and features

--- a/MyPersonalFinance/package.json
+++ b/MyPersonalFinance/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-personal-finance",
+  "name": "authentication-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,12 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "^14.1.1",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "^14.1.1",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
@@ -25,8 +26,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.5",
-    "@angular/cli": "^12.2.0",
+    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
