--- a/MyPersonalFinance/angular.json
+++ b/MyPersonalFinance/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/authentication-app",
+            "outputPath": "dist/personal-finance",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
