--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: '12.x'
           
+      - name: cd
+        run: cd MyPersonalFinance
+
       - name: Install dependencies
         run: npm ci
         
