--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Use Node 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: '16.10'
       
       - name: Install dependencies
         working-directory: ./MyPersonalFinance
