--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -38,12 +38,12 @@ jobs:
           name: deploy_dist
           path: ./MyPersonalFinance/dist
           
-      - name: Archive code coverage result
-        if: success()
-        uses: actions/upload-artifact@v1
-        with:
-          name: deploy_coverage
-          path: coverage
+      #- name: Archive code coverage result
+        #if: success()
+        #uses: actions/upload-artifact@v1
+        #with:
+          #name: deploy_coverage
+          #path: coverage
 
   deploy:
     runs-on: ubuntu-latest
