--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -53,9 +53,19 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: deploy_dist
+        
+      - name: pwd
+        run: pwd
+
+      - name: ls
+        run: ls
+        
+      - name: ls1
+        run: ls ./dist
+  
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: ./MyPersonalFinance/dist/
+          FOLDER: ./MyPersonalFinance/dist/personal-finance
