--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -61,11 +61,11 @@ jobs:
         run: ls
         
       - name: ls1
-        run: ls ./dist
+        run: ls ./MyPersonalFinance/dist
   
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: ./MyPersonalFinance/dist/personal-finance
+          FOLDER: ./MyPersonalFinance/dist/personal-finance/
