--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -61,7 +61,7 @@ jobs:
         run: ls
         
       - name: ls1
-        run: ls ./MyPersonalFinance/dist
+        run: ls ./MyPersonalFinance
   
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
