--- a/.github/workflows/deploy-gh-pg.yml
+++ b/.github/workflows/deploy-gh-pg.yml
@@ -26,23 +26,13 @@ jobs:
         working-directory: ./MyPersonalFinance
         run: npm run build
 
-      - name: ls
-        run: ls ./MyPersonalFinance/
-
       - name: Archive build
         if: success()
         uses: actions/upload-artifact@v1
         with:
           name: deploy_dist
           path: ./MyPersonalFinance/dist
-          
-      #- name: Archive code coverage result
-        #if: success()
-        #uses: actions/upload-artifact@v1
-        #with:
-          #name: deploy_coverage
-          #path: coverage
-
+        
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -53,19 +43,10 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: deploy_dist
-        
-      - name: pwd
-        run: pwd
-
-      - name: ls
-        run: ls
-        
-      - name: ls1
-        run: ls ./MyPersonalFinance
   
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: main
+          BRANCH: gh-pages
           FOLDER: deploy_dist
